Fix the overflow bug in IE7
Due to the article height setting of 30em to deal with the min-height
hack it keeps the bounding box at a fixed height.

In cases where the article tag has the .group class applied it's because
the inner content extends past this enforced height restriction. Remove
the height restriction in these cases to fix the IE7 rendering bug.

--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -423,6 +423,12 @@ article {
     height: 30em;
   }
 
+  &.group {
+    @include ie-lte(7) {
+      height: auto;
+    }
+  }
+
   .inner {
     padding: 0 5em 2em 5em;
     width: auto;
